--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ body {
   margin: 5px;
   align-items: center;
   width: 25%;
-  height: 100px;
+  
   padding: 5px;
   box-shadow: 0px 0px 5px black;
 }
@@ -763,6 +763,12 @@ box-shadow:  0px 0px 10px greenyellow;
   .portafolio__tarjeta a {
     font-size: 2.5rem;
   }
+  .modal{
+    font-size: 1.5rem;
+  }
+  .modal a{
+    font-size: 3rem;
+  }
   
 }
 
@@ -818,6 +824,13 @@ box-shadow:  0px 0px 10px greenyellow;
   .portafolio__tarjeta a {
     font-size: 3.5rem;
   }
+  .modal{
+    font-size: 2.5rem;
+  }
+  .modal a{
+    font-size: 5rem;
+    margin: 30px;
+  }
 }
 
 @media screen and (min-width: 1100px) {
@@ -854,6 +867,7 @@ box-shadow:  0px 0px 10px greenyellow;
   .portafolio__tarjeta h2{
     font-size: 1.8rem;
   }
+  
   .form__entry label{
     font-size: 2rem;
   }
@@ -871,6 +885,13 @@ box-shadow:  0px 0px 10px greenyellow;
   }
   .portafolio__tarjeta a {
     font-size: 4rem;
+  }
+  .modal a{
+    margin: 30px;
+    font-size: 6rem;
+  }
+  .modal{
+    font-size: 3rem;
   }
 }
 
