--- a/style.css
+++ b/style.css
@@ -1,27 +1,27 @@
-:root {
-
-  --colorfondo: white;
-  --relojfondo:#464646;
-  --sombra-perfil: 0px 0px 38px black;
-  --bgcv: rgb(23, 124, 131);
-  --color-green: springgreen;
-  --color-red: black;
-  --color-button: gray;
-  --color-black: springgreen;
-  
-  --enlace-color: springgreen;
-  --text-color: #464646;
-}
-
-body.ligth-theme {
+:root  {
   --colorfondo: #232527;
   --text-color: white;
   --sombra-perfil: 0px 0px 38px white;
   --bgcv: black;
   --enlace-color: springgreen;
   --relojfondo: white;
-    --color-black: black;
+  --color-black: black;
 
+  --color-green: springgreen;
+  --color-red: black;
+  --color-button: gray;
+
+}
+
+body.ligth-theme{
+
+  --colorfondo: white;
+  --text-color: #464646;
+  --sombra-perfil: 0px 0px 38px black;
+  --bgcv: rgb(23, 124, 131);
+  --enlace-color: springgreen;
+  --relojfondo:#464646;
+  --color-black: springgreen;
 }
 
 .menu {
@@ -214,8 +214,8 @@ body {
 
 .skills h1 {
   font-size: 4rem;
-  margin-bottom: 100px;
-  margin-top: 50px;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 .formacion {
@@ -226,8 +226,6 @@ body {
 }
 
 .formacion__container {
-
-  display: flex;
   width: 100%;
   align-items: center;
   margin-bottom: 40px;
@@ -241,30 +239,32 @@ body {
 }
 
 .formacion h3 {
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: #000;
 }
 
 .formacion__tarjeta {
-  width: 50%;
-  padding: 10px;
+  align-items: center;
+  padding: 20px;
+  display: flex;
+  justify-content: space-around;
 }
 .formacion__tarjeta__cursos {
   display: flex;
-  
+  justify-content: space-around;
   margin: 5px;
   align-items: center;
   width: 25%;
-  
   padding: 5px;
   box-shadow: 0px 0px 5px black;
 }
 
 .formacion__img {
-  width: 100%;
+  width: 25%;
 }
 .cursos{
   flex-wrap: wrap;
+  display: flex;
   justify-content: space-around;
   align-items: center;
 }
@@ -369,6 +369,7 @@ body {
 .portafolio__container {
   justify-content: space-around;
   display: flex;
+  flex-wrap: wrap;
   width: 100%;
 }
 
@@ -377,7 +378,7 @@ body {
   margin-top: 20px;
   margin-bottom: 20px;
   height: auto;
-  width: 40%;
+  width: 150px;
   border: 3px solid;
   border-color: var(--text-color);
   border-radius: 20px;
@@ -387,9 +388,7 @@ body {
 .portafolio__tarjeta a {
   width: 40%;
   color: var(--text-color);
-  font-size: 50px;
   text-decoration: none;
-  margin: 3%;
 }
 .portafolio__tarjeta h2{
   font-size: 1.8rem;
@@ -405,7 +404,9 @@ body {
   align-items: center;
   justify-content: space-around;
   text-align: center;
+  margin-bottom: 5px;
 }
+
 .portafolio__tarjeta:hover {
   transform: scale(105%);
 }
@@ -445,7 +446,7 @@ span {
 
 i {
   color: springgreen;
-  font-size: 5rem;
+  font-size: 3rem;
   text-shadow: 0px 0px 3px black;
   animation: rotar linear 6s infinite;
 }
@@ -502,20 +503,16 @@ i {
 }
 
 .nombre {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   position: absolute;
   color: var(--text-color);
   width: 100%;
-  opacity: 0%;
   top: 0;
   left: 0;
   right: 0;
   margin: 0 auto;
 }
 
-.tarjeta:hover .nombre {
-  opacity: 100%;
-}
 
 .tarjeta:hover .icon {
   transform: rotateY(0) !important;
@@ -728,7 +725,7 @@ box-shadow:  0px 0px 10px greenyellow;
     font-size: 2.5rem;
   }
   .skills h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
   .experiencia h1 {
     font-size: 2.5rem;
@@ -761,7 +758,7 @@ box-shadow:  0px 0px 10px greenyellow;
     font-size: 2rem;
   }
   .portafolio__tarjeta a {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
   }
   .modal{
     font-size: 1.5rem;
@@ -822,7 +819,7 @@ box-shadow:  0px 0px 10px greenyellow;
     font-size: 2.2rem;
   }
   .portafolio__tarjeta a {
-    font-size: 3.5rem;
+    font-size: 2rem;
   }
   .modal{
     font-size: 2.5rem;
@@ -884,7 +881,7 @@ box-shadow:  0px 0px 10px greenyellow;
     font-size: 3rem;
   }
   .portafolio__tarjeta a {
-    font-size: 4rem;
+    font-size: 2.5rem;
   }
   .modal a{
     margin: 30px;
